<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AquaGestion</string>

    <!-- strings para login -->
    <string name="string_titulo">Inicio de Sesión</string>
    <string name="string_usuario">Usuario</string>
    <string name="string_contrasenia">Contraseña</string>
    <string name="string_btn_ingresar">Iniciar Sesión</string>
    <string name="string_registrar"> <u>Registrar Cuenta</u> </string>

    <!-- strings para menu principal -->
    <string name="main_menu_title">Menú Principal</string>
    <string name="products">Productos</string>
    <string name="inventory">Inventario</string>
    <string name="ventas">Ventas</string>
    <string name="reports">Reportes</string>
    <string name="cerra_sesion">Cerrar Sesión</string>

    <!-- descripción de imágenes -->
    <string name="products_image_desc">Imagen de Productos</string>
    <string name="inventory_image_desc">Imagen de Inventario</string>
    <string name="clients_image_desc">Imagen de Clientes</string>
    <string name="reports_image_desc">Imagen de Reportes</string>

    <!-- strings para Registro de producto -->
    <string name="registro_producto">Registro Producto</string>
    <string name="nombre_producto">Nombre del Producto:</string>
    <string name="capacidad_producto">Capacidad del Producto:</string>
    <string name="precio_producto">Precio del Producto:</string>
    <string name="descripcion_producto">Descripción del Producto:</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_cancelar">Cancelar</string>

    <string-array name="unidad_medida_array">
        <item>ml</item>
        <item>L</item>
    </string-array>

    <!-- strings para Inventario -->
    <string name="inventario_productos">Inventario de Productos</string>
    <string name="btn_agregar_producto">Agregar Producto</string>
    <string name="btn_cancelar_productos">Cancelar</string>

    <!-- strings para el registro de usuario -->
    <string name="string_titulo_RU">Registro de Usuario</string>
    <string name="string_RU_usuario">Ingrese su Usuario</string>
    <string name="input_RU_usuario">Usuario</string>
    <string name="string_RU_correo">Ingrese su Correo</string>
    <string name="input_RU_correo">Correo</string>
    <string name="string_RU_contrasenia1">Ingrese su Contraseña</string>
    <string name="string_RU_contrasenia2">Repita su Contraseña</string>
    <string name="input_RU_contrasenia">Contraseña</string>
    <string name="btn_RU_registrar">Registrar</string>
    <string name="btn_RU_cancelar">Cancelar</string>

    <!-- strings para productos -->
    <string name="string_titulo_Productos">Lista de Productos</string>
    <string name="btn_salir_productos">Salir</string>
    <string name="btn_agregar">Agregar</string>

    <!-- strings para realizar ventas -->
    <string name="realizar_venta">Realizar Venta</string>
    <string name="descripcion_producto_ventas">Descripción del Producto:</string>
    <string name="ingresar_cantidad">Ingresar Cantidad</string>
    <string name="btn_realizar_venta">Realizar Venta</string>
    <string name="btn_editar_venta">Editar Venta</string>
    <string name="btn_cancelar_venta">Cancelar Venta</string>
    <string name="fecha_actual">Fecha: %1$s</string>
    <string name="total_venta">Total de la venta S/.</string>

    <!-- strings para confirmar venta -->
    <string name="confirmar_venta">Confirmar Venta</string>
    <string name="producto_id">ID del Producto:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="fecha">Fecha:</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_hecho">Hecho</string>

    <!--    string para agregar poductos-->
    <string name="string_nombre_poducto">Nombre de Producto</string>
    <string name="string_capacidad_producto">Capacidad del Producto</string>
    <string name="string_descripcion_producto">Descrpción del producto</string>
    <string name="string_precio_producto">Precio del Producto</string>
    <string name="reporte_Img_producto">imagen del producto</string>
    <string name="string_btn_selecionar_imagen">Seleccionar Imagen</string>
    <string name="string_btn_agregar_producto">Agregar Producto</string>

    <!--    string para editar producto-->
    <string name="string_producto_nombre">Nombre del Producto</string>
    <string name="string_producto_capacidad">Capacidad del Producto</string>
    <string name="string_producto_descripcion">Descripción del Producto</string>
    <string name="string_producto_precio">Precio del Producto</string>
    <string name="string_producto_img_descripcion">Descripción de la imagen</string>
    <string name="string_btn_seleccionar_img">Seleccionar Imagen</string>
    <string name="string_btn_actualizar_producto">Actualizar Producto</string>

    <string name="btn_eliminar">Eliminar</string>

    <!-- strings para reporte de ventas -->
    <string name="string_titulo_RP">Reporte de Ventas</string>
    <string name="btn_salir_RP">Salir</string>

    <string name="repor_imagen_producto">imag del producto</string>
    <string name="repor_nombre_poducto">Nombre del Producto</string>
    <string name="repor_cant_pedido">Cantidad del Producto</string>
    <string name="repor_precio_pedido">Precio del Producto</string>
    <string name="fecha_venta">Fecha de la Venta</string>
    <string name="repor_tot_pag">Total a Pagar</string>
    <string name="btn_eliminar_repor">Eliminar</string>

    <string name="back_button">Back</string>
</resources>
