<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general"
    tools:context=".Activity_Menu_Principal">

    <!-- Título del menú principal -->
    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/main_menu_title"
        android:textColor="@color/negro"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <!-- Imagen y botón de Productos -->
    <LinearLayout
        android:id="@+id/productsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:id="@+id/imgProducts"
            android:layout_width="126dp"
            android:layout_height="159dp"
            android:background="@drawable/edittext_background"
            android:contentDescription="@string/products_image_desc"
            android:src="@drawable/agua" />

        <Button
            android:id="@+id/btnProducts"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="-10dp"
            android:background="#9C27B0"
            android:onClick="ingre_producto"
            android:text="@string/products"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Imagen y botón de Inventario -->
    <LinearLayout
        android:id="@+id/inventoryLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:id="@+id/imgInventory"
            android:layout_width="126dp"
            android:layout_height="159dp"
            android:background="@drawable/edittext_background"
            android:contentDescription="@string/inventory_image_desc"
            android:src="@drawable/inventario" />

        <Button
            android:id="@+id/btnInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="#9C27B0"
            android:onClick="ingreso_inventario"
            android:text="@string/inventory"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Imagen y botón de Clientes -->
    <LinearLayout
        android:id="@+id/clientsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/productsLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsLayout">

        <ImageView
            android:id="@+id/imgClients"
            android:layout_width="126dp"
            android:layout_height="159dp"
            android:background="@drawable/edittext_background"
            android:contentDescription="@string/clients_image_desc"
            android:src="@drawable/ventas1" />

        <Button
            android:id="@+id/btnVentas"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="-10dp"
            android:background="#9C27B0"
            android:onClick="registro_ventas"
            android:text="@string/ventas"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Imagen y botón de Reportes -->
    <LinearLayout
        android:id="@+id/reportsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inventoryLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventoryLayout">

        <ImageView
            android:id="@+id/imgReports"
            android:layout_width="126dp"
            android:layout_height="159dp"
            android:background="@drawable/edittext_background"
            android:contentDescription="@string/reports_image_desc"
            android:src="@drawable/reporte" />

        <Button
            android:id="@+id/btnReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="#9C27B0"
            android:onClick="ingreso_reportes"
            android:text="@string/reports"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="cerrar_sesion"
        android:text="@string/cerra_sesion"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientsLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>