<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Actividades.Activity_registroUsuario">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/edittext_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/string_titulo_RU"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:text="@string/string_RU_usuario"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_usuario_registro"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:width="0dp"
            android:autofillHints=""
            android:background="@drawable/contenedor_login"
            android:ems="10"
            android:hint="@string/input_RU_usuario"
            android:inputType="text"
            android:maxLength="20"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:width="0dp"
            android:autofillHints=""
            android:text="@string/string_RU_correo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_correo_registro"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:width="0dp"
            android:background="@drawable/contenedor_login"
            android:ems="10"
            android:hint="@string/input_RU_correo"
            android:inputType="text"
            android:maxLength="50"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:width="0dp"
            android:text="@string/string_RU_contrasenia1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/txt_contrasenia1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:width="0dp"
            android:background="@drawable/contenedor_login"
            android:ems="10"
            android:hint="@string/input_RU_contrasenia"
            android:inputType="text|textPassword"
            android:maxLength="20"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:width="0dp"
            android:text="@string/string_RU_contrasenia2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_contrasenia2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:width="0dp"
            android:background="@drawable/contenedor_login"
            android:ems="10"
            android:hint="@string/input_RU_contrasenia"
            android:inputType="text|textPassword"
            android:maxLength="20"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#3F51B5"
            android:onClick="registro"
            android:text="@string/btn_RU_registrar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#DDF4F2"
            android:onClick="volver"
            android:text="@string/btn_RU_cancelar"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>