<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general"
    tools:context=".Activity_Reporte_Ventas"
    tools:ignore="VisualLintBounds">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/string_titulo_RP"
        android:textColor="@color/negro"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blanco"
        android:onClick="salir_ventas"
        android:text="@string/btn_salir_RP"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.77" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/baseline_water_drop_24"
            android:contentDescription="@string/repor_imagen_producto" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="112dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry,TextSizeCheck">

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/repor_nombre_poducto"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvProductQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repor_cant_pedido"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repor_precio_pedido"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/etFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_venta"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvTotalPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repor_tot_pag"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
