<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_realizar_venta"
    android:background="@drawable/fondo_general">

    <!-- Contenedor principal centrado -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="#AAFFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <!-- Título de la pantalla -->
        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/realizar_venta"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- TextView para mostrar la fecha actual -->
        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#DDDDDD"
            android:padding="8dp"
            android:textColorHint="#616161"
            tools:ignore="HardcodedText" />

        <!-- Spinner para seleccionar productos -->
        <Spinner
            android:id="@+id/spinnerProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <!-- TextView para mostrar la descripción del producto -->
        <TextView
            android:id="@+id/tvDescripcionProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#DDDDDD"
            android:hint="@string/descripcion_producto"
            android:padding="8dp"
            android:textColorHint="#616161" />

        <!-- TextView para mostrar el precio del producto -->
        <TextView
            android:id="@+id/tvPrecioProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#DDDDDD"
            android:hint="@string/precio_producto"
            android:padding="8dp"
            android:textColorHint="#616161" />

        <!-- EditText para ingresar la cantidad -->
        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ingresar_cantidad"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#37474F" />

        <!-- TextView para mostrar el total de la venta -->
        <TextView
            android:id="@+id/tvTotalVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#DDDDDD"
            android:hint="@string/total_venta"
            android:padding="8dp"
            android:textColorHint="#616161" />

        <!-- Botón para realizar la venta -->
        <Button
            android:id="@+id/btnRealizarVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_realizar_venta"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!-- Botón para cancelar la venta -->
        <Button
            android:id="@+id/btnCancelarVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cancelar_venta"
            android:text="@string/btn_cancelar_venta" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
