<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_nombre_poducto"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etProductCapacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_capacidad_producto"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductName"
        tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_descripcion_producto"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductCapacity"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_precio_producto"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductDescription"
        tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/string_descripcion_Img_producto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductPrice"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_btn_selecionar_imagen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProductImage"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_btn_agregar_producto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSelectImage"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
