<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general"
    tools:context=".Activity_Productos"
    tools:ignore="VisualLintBounds">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/contendor_general"
        android:gravity="center"
        android:text="@string/string_titulo_Productos"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/contendor_general"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:onClick="salir_productos"
        android:text="@string/btn_salir_productos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.452" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azul"
        android:onClick="agregar_productos"
        android:text="@string/btn_agregar"
        android:textColor="#212121"
        app:cornerRadius="5dp"
        tools:ignore="ButtonStyle,MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="654dp" />
</androidx.constraintlayout.widget.ConstraintLayout>